noinst_LTLIBRARIES = libnubase.la

EXTRA_DIST = linuxlist.h config-table.h ipv6.h log.h nubase.h packet_parser.h strings.h ext_proto.h

AM_CPPFLAGS = -I$(top_srcdir)/src/include/

libnubase_la_SOURCES =			\
		config-table.c		\
		log.c			\
		ipv6.c			\
		packet_parser.c		\
		strings.c		\
		ext_proto.c

